Update hint message to guide users to console and Google

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <span class="command">cat hint.txt</span>
                         </div>
                         <div class="output hint">
-                            <p class="blink">Hint: maybe search console?? Use google to solve it</p>
+                            <p class="blink">Answer is in console. Use google to solve it</p>
                         </div>
                     </div>
                     
